Address code review comments and fix some other small bugs.